tests/fixtures/invalid/float_notin_none.py
# Cannot use 'not in' with Float and None
x: bool = 1.0 not in None
